Adding admin and user qualification workflow
